milestone2/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: janpeter-dhalle-lighttpd-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: janpeter_dhalle_lighttpd
  replicas: 1
  template:
    metadata:
      labels:
        app: janpeter_dhalle_lighttpd
    spec:
      containers:
        - name: ubuntu-lighttpd
          image: janpeterd/ubuntu-lighttpd:latest
          ports:
            - containerPort: 80
              name: http # from now on we can use the name http to refer to this port
          livenessProbe: # checks if the server still works every 5 seconds
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe: # checks if the server is ready to accept traffic
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
