milestone2/mongo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: janpeter-dhalle-mongo-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: janpeter_dhalle_mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: janpeter_dhalle_mongo
    spec:
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: mongo-init-volume
          persistentVolumeClaim:
            claimName: mongo-init-pvc
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - mountPath: /data/db
              name: mongo-volume
            - mountPath: /docker-entrypoint-initdb.d
              name: mongo-init-volume
