milestone2/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: janpeter-dhalle-api-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: api
      name: api
  selector:
    app: janpeter_dhalle_api
