milestone2/api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: janpeter-dhalle-api-ingress
  namespace: default
  labels:
    app: janpeter_dhalle_api
spec:
  rules:
    - host: janpeter-dhalle-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: janpeter-dhalle-api-service
                port:
                  number: 3000
